--- a/src/Project/ProjectsPage.css
+++ b/src/Project/ProjectsPage.css
@@ -1,16 +1,15 @@
 #projType {
     display: flex;
     flex-direction: row;
-    width: 100vw;
+    width: 100%;
     height: 50px;
     font-size: 1.2em;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .projTypeItem {
     flex-basis: 0;
-    flex-grow: 1;
     border: 1px solid #333333;
     background-color: #ff9061;
     height: 100%;
@@ -18,9 +17,16 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    padding: 0 30px;
 }
 
     .projTypeItem:hover {
+        cursor: pointer;
+        border: 2px solid #333333;
+        background-color: #ffb08f;
+    }
+
+    .projTypeItem.selected {
         cursor: pointer;
         border: 2px solid #333333;
         background-color: #ffb08f;
@@ -30,18 +36,10 @@
     flex-direction: row;
 }
 
-body {
-    background-color: #fffbf2;
-    color: #333333;
-}
-
-#header {
-    background-color: #ff9061;
-    width: 100vw;
-    height: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+@media(max-width: 850px) {
+    #showProjects > :nth-child(2n+1) > .card {
+        flex-direction: column;
+    }
 }
 
 hr {
